[build-system]
requires = ["flit_core>=3.2"]
build-backend = "flit_core.buildapi"

[project]
name = "dnaplotlib2"
version = "1.0"
authors = [
    { name="Thomas Gorochowski", email="tom@chofski.co.uk" },
    { name="MIT iGEM", email="mit-igem@mit.edu" }
]
description = "Genetic design visualization"
readme = "README.md"
license = { file="LILCENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.urls]
"Homepage" = "https://github.com/mit-igem/dnaplotlib"
"Bug Tracker" = "https://github.com/mit-igem/dnaplotlib"
